--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -44,18 +44,33 @@
       <section class="content-section">
 
         <header class="section-header">
-          <h2>Experience</h2>
+          <h2>Ability</h2>
         </header>
+
+        <div class="resume-item">
+          <h4 class="resume-item-details">번역</h4>
+          <p class="resume-item-copy">프로그래밍 관련 강의나 문서, 글을 번역</p>
+          <p class="resume-item-copy">화려한 수식어구가 아니라 의도를 잘 전달하는 수준 (한국어 -> 영어)</p>
+        </div>
+
+        <div class="resume-item">
+          <h4 class="resume-item-details">콘텐츠 제작</h4>
+          <p class="resume-item-copy">말하려는 의도를 담백하고 재미있게 전달하는 글</p>
+          <p class="resume-item-copy">논리적인 글</p>
+          <p class="resume-item-copy">비디오 촬영 및 편집</p>
+          <p class="resume-item-copy">카드뉴스 제작</p>
+          <p class="resume-item-copy">작은 단위의 심플한 웹툰 제작</p>
+          <p class="resume-item-copy">뉴스레터 제작</p>
+        </div>
 
         <!-- Duplicate these resume-item elements and edit accordingly for each job you want to add here -->
         <div class="resume-item" itemscope itemprop="worksFor" itemtype="http://schema.org/Organization">
-          <h3 class="resume-item-title" itemprop="name">Springfield Nuclear Power Plant</h3>
+          <h3 class="resume-item-title" itemprop="name">번역</h3>
           <h4 class="resume-item-details" itemprop="description">Safety Inspector &bull; Nov, 1980 &mdash; Present</h4>
           <p class="resume-item-copy">Write about your core competencies in one or two sentences describing your position. If you held the position for a long time, it could be a longer section, including a couple bullet points:</p>
           <ul class="resume-item-list">
-            <li>Ate lots of donuts</li>
-            <li>Fell asleep rarely</li>
-            <li>Left promptly at end of day (sometimes earlier)</li>
+            <li>프로그래밍 관련 강의나 문서, 글을 번역</li>
+            <li>화려한 수식어구가 아니라 의도를 잘 전달하는 수준 (한국어 -> 영어)</li>
           </ul>
           <p class="resume-item-copy">If you're going to copy paste markup, or edit it, just be sure to keep the appropriate classnames on your new elements for styling purposes.</p>
 
@@ -63,9 +78,17 @@
 
         <!-- another resume item -->
         <div class="resume-item" itemscope itemprop="worksFor" itemtype="http://schema.org/Organization">
-          <h3 class="resume-item-title" itemprop="name">Sir Putt-A-Lot's Merrie Olde Fun Centre</h3>
+          <h3 class="resume-item-title" itemprop="name">콘텐츠 제작</h3>
           <h4 class="resume-item-details" itemprop="description">Windmill Crank Operator &bull; Jun, 1978 &mdash; Sept, 1979</h4>
           <p class="resume-item-copy">If your stint was shorter, feel free to be brief and just call out the most meaningful points of your role. Be concise, and be meaninful. The person reading just needs enough to want to talk to you more about your experience.</p>
+          <ul class="resume-item-list">
+            <li>논리적인 글 쓰기</li>
+            <li>말하려는 의도를 담백하고 재미있게 전달하는 글</li>
+            <li>카드뉴스 제작</li>
+            <li>작은 단위의 심플한 웹툰 제작</li>
+            <li>뉴스레터 제작</li>
+          </ul>
+
 
         </div><!-- end of resume-item -->
 
@@ -86,12 +109,12 @@
       <section class="content-section">
 
         <header class="section-header">
-          <h2>Education</h2>
+          <h2>Projects</h2>
         </header>
 
         <div class="resume-item" itemscope itemprop="alumniOf" itemtype="http://schema.org/CollegeOrUniversity">
-          <h3 class="resume-item-title" itemprop="name">Springfield College</h3>
-          <h4 class="resume-item-details" itemprop="description">Associates Degree, Business Management &bull; 1984 &mdash; 1986</h4>
+          <h3 class="resume-item-title" itemprop="name">한글링</h3>
+          <h4 class="resume-item-details" itemprop="description">번역프로젝트 &bull; 2016.6 &mdash; Present</h4>
           <p class="resume-item-copy">If you had any meaningful roles at college, feel free to write about them here.</p>
         </div>
 
