--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -27,7 +27,7 @@
         </div>
 
         <div class="executive-summary" itemprop="description">
-          <p>This is the executive summary. You should write a few brief, concise, and meaningful sentences about yourself from a professional context, and your immediate career goals. Make the length appropriate for your needs, but K.I.S.S.</p>
+          <p>한 곳에 멈춰있지 않고, 여러 분야를 경험하며 끊임없이 그 안에서 화학작용이 일어나 새로운 창조물이 나오고 그 곳에 나만의 색을 녹여 나만의 것을 만든다. 나만이 할 수 있는 일, 그 가치를 믿어요.</p>
         </div>
 
         {% if site.resume_looking_for_work == 'yes' %}
@@ -49,8 +49,12 @@
 
         <div class="resume-item">
           <h4 class="resume-item-details">번역</h4>
-          <p class="resume-item-copy">프로그래밍 관련 강의나 문서, 글을 번역</p>
-          <p class="resume-item-copy">화려한 수식어구가 아니라 의도를 잘 전달하는 수준 (한국어 -> 영어)</p>
+          <ul>
+            <li>
+              <p class="resume-item-copy">프로그래밍 관련 강의나 문서, 글을 번역</p>
+              <p class="resume-item-copy">화려한 수식어구가 아니라 의도를 잘 전달하는 수준 (한국어 -> 영어)</p>
+            </li>
+          </ul>
         </div>
 
         <div class="resume-item">
@@ -113,9 +117,91 @@
         </header>
 
         <div class="resume-item" itemscope itemprop="alumniOf" itemtype="http://schema.org/CollegeOrUniversity">
-          <h3 class="resume-item-title" itemprop="name">한글링</h3>
-          <h4 class="resume-item-details" itemprop="description">번역프로젝트 &bull; 2016.6 &mdash; Present</h4>
-          <p class="resume-item-copy">If you had any meaningful roles at college, feel free to write about them here.</p>
+          <h3 class="resume-item-title" itemprop="name"><a href="http://hangling.org">한글링</a></h3>
+          <h4 class="resume-item-details" itemprop="description">번역 &bull; 2016.6 &mdash; Present</h4>
+          <p class="resume-item-copy">한글링은 외국에서 사랑받고 있는 훌륭한 교육 컨텐츠를 한국어로 번역하여 제공해 드리는 프로젝트입니다. 현재 진행하고 있는 강의는 <a href="https://itunesu.itunes.apple.com/WebObjects/LZDirectory.woa/ra/directory/courses/1104579961/feed%0D">Stanford Developing iOS9 Apps with Swift</a>를 번역한 아이오에스입니다.</p>
+          <ul>
+            <li>사용한 툴: 에버노트, <a href="https://goo.gl/r5dSK7">유투브</a></li>
+            <li>프로세스: 영어스크립트번역 - 영상과 비교하여 한번 더 확인 및 오타수정 - 유투브에 자막등록</li>
+            <li>반응: <a href="https://goo.gl/KRBu5S">나는 프로그래머다</a>, <a href="https://goo.gl/RCYbHf">인프런</a></li>
+          </ul>
+          <h4 class="resume-item-details" itemprop="description">워드프레스 개발 및 관리 &bull; 2016.8 &mdash; Present</h4>
+           <ul>
+             <li>프로세스: 프로세스: 원하는 핵심 기능 도출 - 알맞는 테마 서칭 - 도메인 및 호스팅 구매 - 워드프레스 설치 - 커스터마이징 - 최적화 - 테스트</li>
+             <li>도메인 및 호스팅업체: <a href="https://kr.godaddy.com/">Godday</a></li>
+             <li>파일소스 관리: Cpanel</li>
+           </ul>
+        </div>
+
+
+        <div class="resume-item" itemscope itemprop="alumniOf" itemtype="http://schema.org/CollegeOrUniversity">
+          <h3 class="resume-item-title" itemprop="name"><a href="https://goo.gl/fKJvYV">디지털노마드 인지발달론 e-book</a></h3>
+          <h4 class="resume-item-details" itemprop="description">콘텐츠제작 &bull; 글 </h4>
+          <p class="resume-item-copy">맥북만 있으면 세계어디에서든지 일을 할 수 있는 디지털노마드로서 살아가면서 생기는 일들과 이러한 노마드들로 이루어진 스타트업 노마드씨 팀원들과 생기는 조금 특이하고도 재미있는 일상을 놓치치 않고 사유하고 기록한 책입니다.</p>
+          <ul>
+            <li>사용한 툴: sigil</li>
+            <li>형식: 에세이</li>
+            <li>반응: <a href="https://goo.gl/S4ndZm">컴퓨터/IT분야 무료책 인기순위 상위권</a></li>
+          </ul>
+        </div>
+
+        <div class="resume-item" itemscope itemprop="alumniOf" itemtype="http://schema.org/CollegeOrUniversity">
+          <h3 class="resume-item-title" itemprop="name"><a href="https://goo.gl/Yya0y2">노마드씨 여행비디오</a></h3>
+          <h4 class="resume-item-details" itemprop="description">콘텐츠제작 </h4>
+          <p class="resume-item-copy">노마드씨팀원들과 여행을 하며 기록한 영상을 편집하였습니다.</p>
+          <ul>
+            <li>사용한 툴: iMovie</li>
+            <li>프로세스: 컨셉 - 음악선정 - 제작</li>
+          </ul>
+        </div>
+
+        <div class="resume-item" itemscope itemprop="alumniOf" itemtype="http://schema.org/CollegeOrUniversity">
+          <h3 class="resume-item-title" itemprop="name"><a href="https://goo.gl/JrgGrg">HeyWine</a></h3>
+          <h4 class="resume-item-details" itemprop="description">콘텐츠제작 & 마케팅</h4>
+          <p class="resume-item-copy"></p>
+          <ul>
+            <li>사용한 툴: Photoshop</li>
+            <li>마케팅 결과: 결과: 60만뷰 / Likes: 772 / Clips: 1262</li>
+          </ul>
+        </div>
+
+
+        <div class="resume-item" itemscope itemprop="alumniOf" itemtype="http://schema.org/CollegeOrUniversity">
+          <h3 class="resume-item-title" itemprop="name"><a href="https://www.evernote.com/l/AbOHTHMikptK-p2jl4TSvTK93c9FQyyObfk">우리는디지털노마드다 뉴스레터</a></h3>
+          <h4 class="resume-item-details" itemprop="description">콘텐츠제작 &bull; 2016.7 &mdash; Present</h4>
+          <p class="resume-item-copy">2주일마다 한번씩 우리는디지털노마드다 커뮤니티에 있는 글 또는 유용한 글들을 발행하고 있습니다. </p>
+          <ul>
+            <li>사용한 툴: Pixelmater, Photoshop, <a href="http://mailchimp.com/">Mailchimp</a></li>
+          </ul>
+        </div>
+
+        <div class="resume-item" itemscope itemprop="alumniOf" itemtype="http://schema.org/CollegeOrUniversity">
+          <h3 class="resume-item-title" itemprop="name"><a href="https://goo.gl/TD5sQM">이밍</a></h3>
+          <h4 class="resume-item-details" itemprop="description">iOS app 개발 &bull; 2016.2 &mdash; 2016.4</h4>
+          <p class="resume-item-copy">이밍은 각나라의 기술이민점수표를 토대로 이민 점수를 합산하여 이민가능여부를 알려주는 어플리케이션입니다.</p>
+          <ul>
+            <li>프로세스: 요구사항파악 - 구현에 대한 피드백 - 일정논의 - 구현 - 테스트 - 배포</li>
+            <li>사용한 개발 툴 : Xcode, Bitbucket</li>
+            <li>커뮤니케이션 툴: Dropbox, Slack, Evernote, GoogleDrive, Hangout</li>
+            <li>일정관리: 팀간트, 트렐로</li>
+            <li>언어: swift</li>
+            <li>사용한 오픈소스 : Google Analytics</li>
+            <li>1.0.4 ~ 1.0.7버전 개발</li>
+            <li>버전별 업데이트주기 약 2주</li>
+          </ul>
+        </div>
+
+        <div class="resume-item" itemscope itemprop="alumniOf" itemtype="http://schema.org/CollegeOrUniversity">
+          <h3 class="resume-item-title" itemprop="name"><a href="https://goo.gl/TD5sQM">노마드씨 인스타그램</a></h3>
+          <h4 class="resume-item-details" itemprop="description">온라인 마케팅</h4>
+          <p class="resume-item-copy">디지털노마드로 이루어진 노마드씨 팀 자체를 홍보하는 채널로써, 디지털노마드의 핵심 노트북과 자신이 원하는 장소에 있는 시각적으로 멋진 사진을 리포스팅하여 올립니다.</p>
+          <ul>
+            <li>프로세스: 전략 - 분석 (경쟁사) - 테마를 정함 - 나만의 해쉬태그 - 멋진 사진을 제작 - 홍보 - 분석</li>
+            <li>나만의 해쉬태그: #노마드씨</li>
+            <li>타겟: 국내에 있는 디지털노마드</li>
+            <li>사용한 분석툴: <a href="http://community.adbby.com/">애비</a></li>
+            <li>결과: 전체 팔로워 298 전체 팔로잉 386 전체 좋아요 8.6k 댓글512</li>
+          </ul>
         </div>
 
       </section>
@@ -127,7 +213,7 @@
       <section class="content-section">
 
         <header class="section-header">
-          <h2>Projects</h2>
+          <h2>Price</h2>
         </header>
 
         <div class="resume-item">
@@ -247,8 +333,7 @@
       {% endif %}
 
       <footer class="page-footer">
-        <p class="footer-line">Made by <a href="http://twitter.com/jglovier">@jglovier</a>. Fork me on <a href="https://github.com/jglovier/resume-template">GitHub</a>.</p>
-        <p class="footer-line">If this is your live resume, you can modify or remove this part. ;-)</p>
+        <p class="footer-line">thanks to nicholasKim</p>
       </footer>
 
     </div>
