--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -50,10 +50,8 @@
         <div class="resume-item">
           <h4 class="resume-item-details">번역</h4>
           <ul>
-            <li>
-              <p class="resume-item-copy">프로그래밍 관련 강의나 문서, 글을 번역</p>
-              <p class="resume-item-copy">화려한 수식어구가 아니라 의도를 잘 전달하는 수준 (한국어 -> 영어)</p>
-            </li>
+            <li><p class="resume-item-copy">프로그래밍 관련 강의나 문서, 글을 번역</p></li>
+            <li><p class="resume-item-copy">화려한 수식어구가 아니라 의도를 잘 전달하는 수준 (한국어 -> 영어)</p></li>
           </ul>
         </div>
 
