--- a/_sass/_mixins.scss
+++ b/_sass/_mixins.scss
@@ -75,7 +75,7 @@
 }
 
 @mixin serif {
-  font-family: "Lora", "Minion Pro", Palatino, Georgia, serif;
+  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 @mixin serif_regular {
