--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -70,7 +70,7 @@
           <h4 class="resume_item-details">개발</h4>
           <ul>
             <li><p class="resume_item-copy">워드프레스 웹사이트 제작 및 관리</p></li>
-            <li><p class="resume_item-copy">네이티브 iOS 앱 6</p></li>
+            <li><p class="resume_item-copy">네이티브 iOS 앱</p></li>
           </ul>
         </div>
 
@@ -87,29 +87,8 @@
             <li><p class="resume_item-copy">소셜미디어 운영</p></li>
           </ul>
         </div>
-
-        <div class="resume_item">
-          <h4 class="resume_item-details">콘텐츠 제작</h4>
-          <ul>
-            <li><p class="resume_item-copy">논리적인 글쓰기</p></li>
-            <li><p class="resume_item-copy">말하려는 의도를 담백하고 재미있게 전달하는 글</p></li>
-            <li><p class="resume_item-copy">카드뉴스 제작</p></li>
-            <li><p class="resume_item-copy">작은 단위의 심플한 웹툰 제작</p></li>
-            <li><p class="resume_item-copy">뉴스레터 제작</p></li>
-          </ul>
-        </div>
-
         <!-- Duplicate these resume-item elements and edit accordingly for each job you want to add here -->
         <!-- end of resume-item -->
-
-        <!-- by now you're getting the picture... -->
-        <div class="resume-item" itemscope itemprop="worksFor" itemtype="http://schema.org/Organization">
-          <h3 class="resume-item-title" itemprop="name">Simpson Lazer Tag</h3>
-          <h4 class="resume-item-details" itemprop="description">Front Desk Attendant &bull; Jun, 1975 &mdash; May, 1978</h4>
-          <p class="resume-item-copy">Boy, when Marge first told me she was going to the Police Academy, I thought it would be fun and exciting, you know, like the movie... Spaceballs. But instead, it's been painful and disturbing, like the movie Police Academy.</p>
-
-        </div><!-- end of resume-item -->
-
       </section>
       <!-- end Experience -->
       {% endif %}
@@ -127,23 +106,23 @@
           <h4 class="resume-item-details" itemprop="description">번역 &bull; 2016.6 &mdash; Present</h4>
           <p class="resume-item-copy">한글링은 외국에서 사랑받고 있는 훌륭한 교육 컨텐츠를 한국어로 번역하여 제공해 드리는 프로젝트입니다. 현재 진행하고 있는 강의는 <a href="https://itunesu.itunes.apple.com/WebObjects/LZDirectory.woa/ra/directory/courses/1104579961/feed%0D">Stanford Developing iOS9 Apps with Swift</a>를 번역한 아이오에스입니다.</p>
           <ul>
-            <li>사용한 툴: 에버노트, <a href="https://goo.gl/r5dSK7">유투브</a></li>
-            <li>프로세스: 영어스크립트번역 - 영상과 비교하여 한번 더 확인 및 오타수정 - 유투브에 자막등록</li>
+            <li>사용한 툴: Evernote, <a href="https://goo.gl/r5dSK7">Youtube</a></li>
+            <li>프로세스: 영어스크립트번역 - 영상과 비교하며 수정 - 유투브에 자막등록 - 웹사이트에 등록</li>
             <li>반응: <a href="https://goo.gl/KRBu5S">나는 프로그래머다</a>, <a href="https://goo.gl/RCYbHf">인프런</a></li>
           </ul>
           <h4 class="resume-item-details" itemprop="description">워드프레스 개발 및 관리 &bull; 2016.8 &mdash; Present</h4>
-          <p class="resume-item-copy">한글링 홈페이지를 워드프레스로 개발 및 커스텀하였습니다. 원하는 기능들이 담긴 테마를 찾아 적용하고 일부분 커스터마이징하였습니다.</p>
+          <p class="resume-item-copy">한글링 홈페이지를 워드프레스로 개발 및 커스텀하였습니다. 원하는 기능들이 담긴 테마를 찾아 설치하고 일부분 커스터마이징하였습니다.</p>
            <ul>
-             <li>프로세스: 프로세스: 원하는 핵심 기능 도출 - 알맞는 테마 서칭 - 도메인 및 호스팅 구매 - 워드프레스 설치 - 커스터마이징 - 최적화 - 테스트</li>
+             <li>프로세스: 원하는 핵심 기능 정의 - 알맞는 테마 서칭 - 도메인 및 호스팅 구매 - 워드프레스 설치 - 커스터마이징 - 최적화 - 테스트</li>
              <li>도메인 및 호스팅업체: <a href="https://kr.godaddy.com/">Godday</a></li>
              <li>파일소스 관리: Cpanel</li>
            </ul>
            <h4 class="resume-item-details" itemprop="description">로고 디자인</h4>
-           <p class="resume-item-copy">한글링이 담고 있는 세종대왕의 훈민정음에 영감을 받아 한글링이 진행형(~ing) 멈춰있지 않고 굴러다니는 역동적인 이미지와 궁서체처럼 한중일 아시아 특유의 붓의 강약 조절 느낌을 살려 디자인하였습니다.</p>
+           <p class="resume-item-copy">한글링이 담고 있는 세종대왕의 훈민정음에 착안하여 한글링이 진행형(~ing) 멈춰있지 않고 굴러다니는 역동적인 이미지와 궁서체처럼 한중일 아시아 특유의 붓의 강약 조절 느낌을 담아 디자인하였습니다.</p>
             <ul>
               <li>사용한 툴: Photoshop, Illustrator</li>
-              <li>파일소스 관리: Cpanel</li>
-              <img src="https://pbs.twimg.com/profile_images/766942598015488000/sFtoRwRO_400x400.jpg" alt="hangling_logo" style="width:300;height:300;">
+              <a href="https://pbs.twimg.com/profile_images/766942598015488000/sFtoRwRO_400x400.jpg">
+                <img src="https://pbs.twimg.com/profile_images/766942598015488000/sFtoRwRO_400x400.jpg" alt="hangling_logo" style="width:200;height:200;"></a>
             </ul>
         </div>
 
@@ -172,20 +151,22 @@
         <div class="resume-item" itemscope itemprop="alumniOf" itemtype="http://schema.org/CollegeOrUniversity">
           <h3 class="resume-item-title" itemprop="name"><a href="https://goo.gl/JrgGrg">HeyWine</a></h3>
           <h4 class="resume-item-details" itemprop="description">콘텐츠제작 & 마케팅</h4>
-          <p class="resume-item-copy"></p>
+          <p class="resume-item-copy">과거<a href="http://www.prnd.co.kr/">prnd company</a>에서 진행했던 프로젝트입니다. 어려운 와인이 아닌 나에게 지금당장 필요한 실전 와인상식을 알려주는 카드뉴스입니다. 차를 가지고 있는 20~30대 남성을 대상으로 하였으며, 카드뉴스 마지막에 제품홍보컨텐츠가 들어갔습니다.</p>
           <ul>
             <li>사용한 툴: Photoshop</li>
-            <li>마케팅 결과: 결과: 60만뷰 / Likes: 772 / Clips: 1262</li>
+            <li>홍보채널: 빙글</li>
+            <li>마케팅 결과: 60만뷰 / Likes: 772 / Clips: 1262</li>
           </ul>
         </div>
 
 
         <div class="resume-item" itemscope itemprop="alumniOf" itemtype="http://schema.org/CollegeOrUniversity">
-          <h3 class="resume-item-title" itemprop="name"><a href="https://www.evernote.com/l/AbOHTHMikptK-p2jl4TSvTK93c9FQyyObfk">우리는디지털노마드다 뉴스레터</a></h3>
+          <h3 class="resume-item-title" itemprop="name"><a href="/newsletter.html">우리는디지털노마드다 뉴스레터</a></h3>
           <h4 class="resume-item-details" itemprop="description">콘텐츠제작 &bull; 2016.7 &mdash; Present</h4>
-          <p class="resume-item-copy">2주일마다 한번씩 우리는디지털노마드다 커뮤니티에 있는 글 또는 유용한 글들을 발행하고 있습니다. </p>
+          <p class="resume-item-copy">2주일마다 한번씩 <a href="http://wearedigitalnomads.kr">우리는디지털노마드다</a>커뮤니티에 있는 글 또는 디지털노마드에게 유용한 글들을 모아 발행하고 있습니다.</p>
           <ul>
             <li>사용한 툴: Pixelmater, Photoshop, <a href="http://mailchimp.com/">Mailchimp</a></li>
+            <li>결과: 평균 53% 오픈률</li>
           </ul>
         </div>
 
@@ -197,8 +178,8 @@
             <li>프로세스: 요구사항파악 - 구현에 대한 피드백 - 일정논의 - 구현 - 테스트 - 배포</li>
             <li>사용한 개발 툴 : Xcode, Bitbucket</li>
             <li>커뮤니케이션 툴: Dropbox, Slack, Evernote, GoogleDrive, Hangout</li>
-            <li>일정관리: 팀간트, 트렐로</li>
-            <li>언어: swift</li>
+            <li>일정관리: <a href="https://www.teamgantt.com">팀간트</a>, <a href="https://trello.com/"></a>trello</li>
+            <li>언어: Swift</li>
             <li>사용한 오픈소스 : Google Analytics</li>
             <li>1.0.4 ~ 1.0.7버전 개발</li>
             <li>버전별 업데이트주기 약 2주</li>
@@ -222,6 +203,63 @@
       <!-- end Projects -->
       {% endif %}
 
+      <!-- begin what can i do-->
+      {% if site.resum_section_whatcanido %}
+      <section class="content-section">
+
+        <header class="section-header">
+          <h2>So, What can I do for you?</h2>
+        </header>
+
+        <div class="resume-item">
+          <h4 class="resume-item-details">현재 운영하는 워드프레스 관리</h4>
+            <p class="resume-item-copy">워드프레스에 익숙한 사람이 필요한 분, 현재 워드프레스에 콘텐츠를 지속적으로 관리하고 올려야하는 분</p>
+        </div>
+
+        <div class="resume-item">
+          <h4 class="resume-item-details">개인 웹사이트 제작</h4>
+            <p class="resume-item-copy">나만의 블로그, 포트폴리오등등 자신의 입맛에 맞는 워드프레스를 쨍하게 만들고 싶은 분</p>
+            <p class="resume-item-copy">워드프레스 제작, 커스터마이징, 전체적인 디자인을 해드립니다.</p>
+        </div>
+
+        <div class="resume-item">
+          <h4 class="resume-item-details">소셜미디어 마케팅</h4>
+            <p class="resume-item-copy">페이스북, 인스타그램등의 소셜미디어에 비즈니스를 위한 온라인마케팅이 필요한 분</p>
+            <p class="resume-item-copy">채널별 적절한 마케팅전략을 기획하여 진행하고 일정기간마다 각 채널 분석자료를 보내드립니다.</p>
+        </div>
+
+        <div class="resume-item">
+          <h4 class="resume-item-details">카드뉴스 제작</h4>
+            <p class="resume-item-copy">자신의 사업을 위한 마케팅으로써 카드뉴스가 필요한 분</p>
+            <p class="resume-item-copy">타겟을 위한 콘텐츠를 제작하고 디자인하여 원하는 채널에 맞게끔 제작해드립니다.</p>
+        </div>
+
+        <div class="resume-item">
+          <h4 class="resume-item-details">프로그래밍관련 번역</h4>
+            <p class="resume-item-copy">프로그래밍관련 문서를 번역해야하는 분, 자신의 제품에 대한 설명이나 문서를 영어혹은 한국어로 번역해야하는 분</p>
+            <p class="resume-item-copy">원하는 의도를 잘 전달하도록 번역해드립니다.</p>
+        </div>
+
+        <div class="resume-item">
+          <h4 class="resume-item-details">에세이 형식의 글 제작</h4>
+            <p class="resume-item-copy">프리랜서 에디터가 필요한 분, 여행콘텐츠가 필요한 분</p>
+            <p class="resume-item-copy">담백하고 재미있게 글을 써드립니다.</p>
+        </div>
+
+        <div class="resume-item">
+          <h4 class="resume-item-details">주니어 iOS 개발자</h4>
+            <p class="resume-item-copy">"이밍"정도 실력을 가진 개발인력이 필요한 분, 이밍정도의 앱을 개발하고 싶으신 분</p>
+            <p class="resume-item-copy">여기서 말하는 이밍정도란: 서버X, 자체DB, 심플한 UI</p>
+        </div>
+
+        <div class="resume-item">
+          <h4 class="resume-item-details">로고 디자이너</h4>
+            <p class="resume-item-copy">자신이 가지고 있는 product에 로고가 필요하신 분</p>
+        </div>
+
+      </section>
+      {% endif %}
+
       {% if site.resume_section_projects %}
       <!-- begin Work Process -->
       <section class="content-section">
@@ -231,7 +269,7 @@
         </header>
 
         <div class="resume-item">
-          <h4 class="resume-item-details">이메일을 통해 문의 - 확인후 연락 - 자세한 협의 - 계약 - 1차 50%계약금 - 제작 - 전달 - 피드백후 - 2차 50%계약금</h4>
+          <p class="resume-item-copy">이메일을 통해 문의 - 확인후 연락 - 자세한 협의 - 계약 - 1차 50%계약금 - 제작 - 전달 - 피드백후 - 2차 50%계약금</p>
         </div>
 
       </section>
@@ -249,8 +287,8 @@
         <div class="resume-item-list">
           <ul>
             <li>주급: 40시간 80만원</li>
-            <li>최소일단위: 4시간 이상 (건당으로는 받지 않아요)</li>
-            <li>계약금은 1차 50%, 2차 50% 나눠서 전달</li>
+            <li>최소일단위: 4시간 이상 (건당X)</li>
+            <li>계약금: 1차 50%, 2차 50% 분할</li>
           </ul>
         </div>
 
