사진 추가 및 3차수정

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -121,8 +121,8 @@
            <p class="resume-item-copy">한글링이 담고 있는 세종대왕의 훈민정음에 착안하여 한글링이 진행형(~ing) 멈춰있지 않고 굴러다니는 역동적인 이미지와 궁서체처럼 한중일 아시아 특유의 붓의 강약 조절 느낌을 담아 디자인하였습니다.</p>
             <ul>
               <li>사용한 툴: Photoshop, Illustrator</li>
-              <a href="https://pbs.twimg.com/profile_images/766942598015488000/sFtoRwRO_400x400.jpg">
-                <img src="https://pbs.twimg.com/profile_images/766942598015488000/sFtoRwRO_400x400.jpg" alt="hangling_logo" style="width:200;height:200;"></a>
+              <a href="https://github.com/LucyJeong/lucyjeong.github.io/tree/master/images/hanglinglogo.jpg">
+                <img src="https://github.com/LucyJeong/lucyjeong.github.io/tree/master/images/hanglinglogo.jpg" alt="hangling_logo"></a>
             </ul>
         </div>
 
@@ -161,7 +161,7 @@
 
 
         <div class="resume-item" itemscope itemprop="alumniOf" itemtype="http://schema.org/CollegeOrUniversity">
-          <h3 class="resume-item-title" itemprop="name"><a href="/newsletter.html">우리는디지털노마드다 뉴스레터</a></h3>
+          <h3 class="resume-item-title" itemprop="name"><a href="/newsletter.html" download>우리는디지털노마드다 뉴스레터</a></h3>
           <h4 class="resume-item-details" itemprop="description">콘텐츠제작 &bull; 2016.7 &mdash; Present</h4>
           <p class="resume-item-copy">2주일마다 한번씩 <a href="http://wearedigitalnomads.kr">우리는디지털노마드다</a>커뮤니티에 있는 글 또는 디지털노마드에게 유용한 글들을 모아 발행하고 있습니다.</p>
           <ul>
@@ -204,7 +204,7 @@
       {% endif %}
 
       <!-- begin what can i do-->
-      {% if site.resum_section_whatcanido %}
+      {% if site.resume_section_education %}
       <section class="content-section">
 
         <header class="section-header">
