--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -59,7 +59,6 @@
           <ul>
             <li><p class="resume-item-copy">말하려는 의도를 담백하고 재미있게 전달하는 글</p></li>
             <li><p class="resume-item-copy">논리적인 글</p></li>
-            <li><p class="resume-item-copy">비디오 촬영 및 편집</p></li>
             <li><p class="resume-item-copy">카드뉴스 제작</p></li>
             <li><p class="resume-item-copy">작은 단위의 심플한 웹툰 제작</p></li>
             <li><p class="resume-item-copy">뉴스레터 제작</p></li>
@@ -121,11 +120,10 @@
            <p class="resume-item-copy">한글링이 담고 있는 세종대왕의 훈민정음에 착안하여 한글링이 진행형(~ing) 멈춰있지 않고 굴러다니는 역동적인 이미지와 궁서체처럼 한중일 아시아 특유의 붓의 강약 조절 느낌을 담아 디자인하였습니다.</p>
             <ul>
               <li>사용한 툴: Photoshop, Illustrator</li>
-              <a href="https://github.com/LucyJeong/lucyjeong.github.io/tree/master/images/hanglinglogo.jpg">
-                <img src="https://github.com/LucyJeong/lucyjeong.github.io/tree/master/images/hanglinglogo.jpg" alt="hangling_logo"></a>
+              <a href="http://hangling.org/wp-content/uploads/2016/09/hanglinglogo.jpg">
+                <img src="http://hangling.org/wp-content/uploads/2016/09/hanglinglogo.jpg" alt="hangling_logo"></a>
             </ul>
         </div>
-
 
         <div class="resume-item" itemscope itemprop="alumniOf" itemtype="http://schema.org/CollegeOrUniversity">
           <h3 class="resume-item-title" itemprop="name"><a href="https://goo.gl/fKJvYV">디지털노마드 인지발달론 e-book</a></h3>
@@ -139,19 +137,9 @@
         </div>
 
         <div class="resume-item" itemscope itemprop="alumniOf" itemtype="http://schema.org/CollegeOrUniversity">
-          <h3 class="resume-item-title" itemprop="name"><a href="https://goo.gl/Yya0y2">노마드씨 여행비디오</a></h3>
-          <h4 class="resume-item-details" itemprop="description">콘텐츠제작 </h4>
-          <p class="resume-item-copy">노마드씨팀원들과 여행을 하며 기록한 영상을 편집하였습니다.</p>
-          <ul>
-            <li>사용한 툴: iMovie</li>
-            <li>프로세스: 컨셉 - 음악선정 - 제작</li>
-          </ul>
-        </div>
-
-        <div class="resume-item" itemscope itemprop="alumniOf" itemtype="http://schema.org/CollegeOrUniversity">
           <h3 class="resume-item-title" itemprop="name"><a href="https://goo.gl/JrgGrg">HeyWine</a></h3>
           <h4 class="resume-item-details" itemprop="description">콘텐츠제작 & 마케팅</h4>
-          <p class="resume-item-copy">과거<a href="http://www.prnd.co.kr/">prnd company</a>에서 진행했던 프로젝트입니다. 어려운 와인이 아닌 나에게 지금당장 필요한 실전 와인상식을 알려주는 카드뉴스입니다. 차를 가지고 있는 20~30대 남성을 대상으로 하였으며, 카드뉴스 마지막에 제품홍보컨텐츠가 들어갔습니다.</p>
+          <p class="resume-item-copy">과거 <a href="http://www.prnd.co.kr/">prnd company</a>에서 진행했던 프로젝트입니다. 어려운 와인이 아닌 나에게 지금당장 필요한 실전 와인상식을 알려주는 카드뉴스입니다. 차를 가지고 있는 20~30대 남성을 대상으로 하였으며, 카드뉴스 마지막에 제품홍보컨텐츠가 들어갔습니다.</p>
           <ul>
             <li>사용한 툴: Photoshop</li>
             <li>홍보채널: 빙글</li>
@@ -159,11 +147,10 @@
           </ul>
         </div>
 
-
         <div class="resume-item" itemscope itemprop="alumniOf" itemtype="http://schema.org/CollegeOrUniversity">
-          <h3 class="resume-item-title" itemprop="name"><a href="/newsletter.html" download>우리는디지털노마드다 뉴스레터</a></h3>
+          <h3 class="resume-item-title" itemprop="name"><a href="https://github.com/LucyJeong/lucyjeong.github.io/blob/master/newletter.html" download>우리는디지털노마드다 뉴스레터</a></h3>
           <h4 class="resume-item-details" itemprop="description">콘텐츠제작 &bull; 2016.7 &mdash; Present</h4>
-          <p class="resume-item-copy">2주일마다 한번씩 <a href="http://wearedigitalnomads.kr">우리는디지털노마드다</a>커뮤니티에 있는 글 또는 디지털노마드에게 유용한 글들을 모아 발행하고 있습니다.</p>
+          <p class="resume-item-copy">2주일마다 한번씩 <a href="http://wearedigitalnomads.kr">우리는디지털노마드다</a> 커뮤니티에 있는 글 또는 디지털노마드에게 유용한 글들을 모아 발행하고 있습니다.</p>
           <ul>
             <li>사용한 툴: Pixelmater, Photoshop, <a href="http://mailchimp.com/">Mailchimp</a></li>
             <li>결과: 평균 53% 오픈률</li>
@@ -231,12 +218,12 @@
         <div class="resume-item">
           <h4 class="resume-item-details">카드뉴스 제작</h4>
             <p class="resume-item-copy">자신의 사업을 위한 마케팅으로써 카드뉴스가 필요한 분</p>
-            <p class="resume-item-copy">타겟을 위한 콘텐츠를 제작하고 디자인하여 원하는 채널에 맞게끔 제작해드립니다.</p>
+            <p class="resume-item-copy">타겟을 위한 콘텐츠를 제작하고 디자인하여 원하는 채널에 최적화하여 제작해드립니다.</p>
         </div>
 
         <div class="resume-item">
           <h4 class="resume-item-details">프로그래밍관련 번역</h4>
-            <p class="resume-item-copy">프로그래밍관련 문서를 번역해야하는 분, 자신의 제품에 대한 설명이나 문서를 영어혹은 한국어로 번역해야하는 분</p>
+            <p class="resume-item-copy">프로그래밍관련 문서를 번역해야하는 분, 자신의 제품에 대한 설명이나 문서를 영어 또는 한국어로 번역해야하는 분</p>
             <p class="resume-item-copy">원하는 의도를 잘 전달하도록 번역해드립니다.</p>
         </div>
 
@@ -249,12 +236,7 @@
         <div class="resume-item">
           <h4 class="resume-item-details">주니어 iOS 개발자</h4>
             <p class="resume-item-copy">"이밍"정도 실력을 가진 개발인력이 필요한 분, 이밍정도의 앱을 개발하고 싶으신 분</p>
-            <p class="resume-item-copy">여기서 말하는 이밍정도란: 서버X, 자체DB, 심플한 UI</p>
-        </div>
-
-        <div class="resume-item">
-          <h4 class="resume-item-details">로고 디자이너</h4>
-            <p class="resume-item-copy">자신이 가지고 있는 product에 로고가 필요하신 분</p>
+            <p class="resume-item-copy">*여기서 말하는 이밍정도란: 서버X, 자체DB, 심플한 UI</p>
         </div>
 
       </section>
@@ -287,7 +269,7 @@
         <div class="resume-item-list">
           <ul>
             <li>주급: 40시간 80만원</li>
-            <li>최소일단위: 4시간 이상 (건당X)</li>
+            <li>최소일단위: 20시간 이상 (건당X)</li>
             <li>계약금: 1차 50%, 2차 50% 분할</li>
           </ul>
         </div>
