--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -46,6 +46,14 @@
           <h2>Skills</h2>
         </header>
 
+        <div class="resume_item">
+          <h4 class="resume_item-details">개발</h4>
+          <ul>
+            <li><p class="resume_item-copy">워드프레스 웹사이트 제작 및 관리</p></li>
+            <li><p class="resume_item-copy">네이티브 iOS 앱</p></li>
+          </ul>
+        </div>
+
         <div class="resume-item">
           <h4 class="resume-item-details">번역</h4>
           <ul>
@@ -62,14 +70,6 @@
             <li><p class="resume-item-copy">카드뉴스 제작</p></li>
             <li><p class="resume-item-copy">작은 단위의 심플한 웹툰 제작</p></li>
             <li><p class="resume-item-copy">뉴스레터 제작</p></li>
-          </ul>
-        </div>
-
-        <div class="resume_item">
-          <h4 class="resume_item-details">개발</h4>
-          <ul>
-            <li><p class="resume_item-copy">워드프레스 웹사이트 제작 및 관리</p></li>
-            <li><p class="resume_item-copy">네이티브 iOS 앱</p></li>
           </ul>
         </div>
 
@@ -101,9 +101,25 @@
         </header>
 
         <div class="resume-item" itemscope itemprop="alumniOf" itemtype="http://schema.org/CollegeOrUniversity">
+          <h3 class="resume-item-title" itemprop="name"><a href="https://goo.gl/TD5sQM">이밍</a></h3>
+          <h4 class="resume-item-details" itemprop="description">iOS app 개발 &bull; 2016.2 &mdash; 2016.4</h4>
+          <p class="resume-item-copy">이밍은 각나라의 기술이민점수표를 토대로 이민 점수를 합산하여 이민가능여부를 알려주는 어플리케이션입니다.</p>
+          <ul>
+            <li>프로세스: 요구사항파악 - 구현에 대한 피드백 - 일정논의 - 구현 - 테스트 - 배포</li>
+            <li>사용한 개발 툴 : Xcode, Bitbucket</li>
+            <li>커뮤니케이션 툴: Dropbox, Slack, Evernote, GoogleDrive, Hangout</li>
+            <li>일정관리: <a href="https://www.teamgantt.com">팀간트</a>, <a href="https://trello.com/"></a>trello</li>
+            <li>언어: Swift</li>
+            <li>사용한 오픈소스 : Google Analytics</li>
+            <li>1.0.4 ~ 1.0.7버전 개발</li>
+            <li>버전별 업데이트주기 약 2주</li>
+          </ul>
+        </div>
+
+        <div class="resume-item" itemscope itemprop="alumniOf" itemtype="http://schema.org/CollegeOrUniversity">
           <h3 class="resume-item-title" itemprop="name"><a href="http://hangling.org">한글링</a></h3>
           <h4 class="resume-item-details" itemprop="description">번역 &bull; 2016.6 &mdash; Present</h4>
-          <p class="resume-item-copy">한글링은 외국에서 사랑받고 있는 훌륭한 교육 컨텐츠를 한국어로 번역하여 제공해 드리는 프로젝트입니다. 현재 진행하고 있는 강의는 <a href="https://itunesu.itunes.apple.com/WebObjects/LZDirectory.woa/ra/directory/courses/1104579961/feed%0D">Stanford Developing iOS9 Apps with Swift</a>를 번역한 아이오에스입니다.</p>
+          <p class="resume-item-copy">한글링은 외국에서 사랑받고 있는 훌륭한 교육 컨텐츠를 한국어로 번역하여 제공해 드리는 프로젝트입니다. 현재 진행하고 있는 강의는 <a href="https://goo.gl/J0urTT">Stanford Developing iOS9 Apps with Swift</a>를 번역한 아이오에스입니다.</p>
           <ul>
             <li>사용한 툴: Evernote, <a href="https://goo.gl/r5dSK7">Youtube</a></li>
             <li>프로세스: 영어스크립트번역 - 영상과 비교하며 수정 - 유투브에 자막등록 - 웹사이트에 등록</li>
@@ -120,9 +136,9 @@
            <p class="resume-item-copy">한글링이 담고 있는 세종대왕의 훈민정음에 착안하여 한글링이 진행형(~ing) 멈춰있지 않고 굴러다니는 역동적인 이미지와 궁서체처럼 한중일 아시아 특유의 붓의 강약 조절 느낌을 담아 디자인하였습니다.</p>
             <ul>
               <li>사용한 툴: Photoshop, Illustrator</li>
-              <a href="http://hangling.org/wp-content/uploads/2016/09/hanglinglogo.jpg">
-                <img src="http://hangling.org/wp-content/uploads/2016/09/hanglinglogo.jpg" alt="hangling_logo"></a>
             </ul>
+            <a href="http://hangling.org/wp-content/uploads/2016/09/hanglinglogo.jpg">
+              <img src="http://hangling.org/wp-content/uploads/2016/09/hanglinglogo.jpg" alt="hangling_logo"></a>
         </div>
 
         <div class="resume-item" itemscope itemprop="alumniOf" itemtype="http://schema.org/CollegeOrUniversity">
@@ -158,29 +174,13 @@
         </div>
 
         <div class="resume-item" itemscope itemprop="alumniOf" itemtype="http://schema.org/CollegeOrUniversity">
-          <h3 class="resume-item-title" itemprop="name"><a href="https://goo.gl/TD5sQM">이밍</a></h3>
-          <h4 class="resume-item-details" itemprop="description">iOS app 개발 &bull; 2016.2 &mdash; 2016.4</h4>
-          <p class="resume-item-copy">이밍은 각나라의 기술이민점수표를 토대로 이민 점수를 합산하여 이민가능여부를 알려주는 어플리케이션입니다.</p>
-          <ul>
-            <li>프로세스: 요구사항파악 - 구현에 대한 피드백 - 일정논의 - 구현 - 테스트 - 배포</li>
-            <li>사용한 개발 툴 : Xcode, Bitbucket</li>
-            <li>커뮤니케이션 툴: Dropbox, Slack, Evernote, GoogleDrive, Hangout</li>
-            <li>일정관리: <a href="https://www.teamgantt.com">팀간트</a>, <a href="https://trello.com/"></a>trello</li>
-            <li>언어: Swift</li>
-            <li>사용한 오픈소스 : Google Analytics</li>
-            <li>1.0.4 ~ 1.0.7버전 개발</li>
-            <li>버전별 업데이트주기 약 2주</li>
-          </ul>
-        </div>
-
-        <div class="resume-item" itemscope itemprop="alumniOf" itemtype="http://schema.org/CollegeOrUniversity">
           <h3 class="resume-item-title" itemprop="name"><a href="https://goo.gl/TD5sQM">노마드씨 인스타그램</a></h3>
           <h4 class="resume-item-details" itemprop="description">온라인 마케팅</h4>
-          <p class="resume-item-copy">디지털노마드로 이루어진 노마드씨 팀 자체를 홍보하는 채널로써, 디지털노마드의 핵심 노트북과 자신이 원하는 장소에 있는 시각적으로 멋진 사진을 리포스팅하여 올립니다.</p>
+          <p class="resume-item-copy">노마드씨가 운영하는 채널로써, 국내외에서 활동하고있는 디지털노마드와 노마드씨를 홍보합니다. 디지털노마드의 핵심인 노트북과 함께 현재 자신이 있는 장소에서 일을 하고 있는 사진을 #노마드씨와 함께 올리면 노마드씨 인스타그램에서 리포스팅합니다.</p>
           <ul>
             <li>프로세스: 전략 - 분석 (경쟁사) - 테마를 정함 - 나만의 해쉬태그 - 멋진 사진을 제작 - 홍보 - 분석</li>
             <li>나만의 해쉬태그: <a href="https://goo.gl/cAq1f5">#노마드씨</a></li>
-            <li>타겟: 국내에 있는 디지털노마드</li>
+            <li>타겟: 국내외 디지털노마드</li>
             <li>사용한 분석툴: <a href="http://community.adbby.com/">애비</a></li>
             <li>결과: 전체 팔로워 298 전체 팔로잉 386 전체 좋아요 8.6k 댓글512</li>
           </ul>
@@ -199,6 +199,12 @@
         </header>
 
         <div class="resume-item">
+          <h4 class="resume-item-details">주니어 iOS 개발자</h4>
+            <p class="resume-item-copy">"이밍"정도 실력을 가진 개발인력이 필요한 분, 이밍정도의 앱을 개발하고 싶으신 분</p>
+            <p class="resume-item-copy">*여기서 말하는 이밍정도란: 서버X, 자체DB, 심플한 UI</p>
+        </div>
+
+        <div class="resume-item">
           <h4 class="resume-item-details">현재 운영하는 워드프레스 관리</h4>
             <p class="resume-item-copy">워드프레스에 익숙한 사람이 필요한 분, 현재 워드프레스에 콘텐츠를 지속적으로 관리하고 올려야하는 분</p>
         </div>
@@ -207,6 +213,12 @@
           <h4 class="resume-item-details">개인 웹사이트 제작</h4>
             <p class="resume-item-copy">나만의 블로그, 포트폴리오등등 자신의 입맛에 맞는 워드프레스를 쨍하게 만들고 싶은 분</p>
             <p class="resume-item-copy">워드프레스 제작, 커스터마이징, 전체적인 디자인을 해드립니다.</p>
+        </div>
+
+        <div class="resume-item">
+          <h4 class="resume-item-details">프로그래밍관련 번역</h4>
+            <p class="resume-item-copy">프로그래밍관련 문서를 번역해야하는 분, 자신의 제품에 대한 설명이나 문서를 영어 또는 한국어로 번역해야하는 분</p>
+            <p class="resume-item-copy">원하는 의도를 잘 전달하도록 번역해드립니다.</p>
         </div>
 
         <div class="resume-item">
@@ -222,22 +234,11 @@
         </div>
 
         <div class="resume-item">
-          <h4 class="resume-item-details">프로그래밍관련 번역</h4>
-            <p class="resume-item-copy">프로그래밍관련 문서를 번역해야하는 분, 자신의 제품에 대한 설명이나 문서를 영어 또는 한국어로 번역해야하는 분</p>
-            <p class="resume-item-copy">원하는 의도를 잘 전달하도록 번역해드립니다.</p>
-        </div>
-
-        <div class="resume-item">
           <h4 class="resume-item-details">에세이 형식의 글 제작</h4>
             <p class="resume-item-copy">프리랜서 에디터가 필요한 분, 여행콘텐츠가 필요한 분</p>
             <p class="resume-item-copy">담백하고 재미있게 글을 써드립니다.</p>
         </div>
 
-        <div class="resume-item">
-          <h4 class="resume-item-details">주니어 iOS 개발자</h4>
-            <p class="resume-item-copy">"이밍"정도 실력을 가진 개발인력이 필요한 분, 이밍정도의 앱을 개발하고 싶으신 분</p>
-            <p class="resume-item-copy">*여기서 말하는 이밍정도란: 서버X, 자체DB, 심플한 UI</p>
-        </div>
 
       </section>
       {% endif %}
