세세한 뛰어쓰기 수정

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -105,13 +105,13 @@
           <p class="resume-item-copy">이밍은 각나라의 기술이민점수표를 토대로 이민 점수를 합산하여 이민가능여부를 알려주는 어플리케이션입니다.</p>
           <ul>
             <li>프로세스: 요구사항파악 - 구현에 대한 피드백 - 일정논의 - 구현 - 테스트 - 배포</li>
-            <li>사용한 개발 툴 : Xcode, Bitbucket</li>
+            <li>사용한 개발 툴: Xcode, Bitbucket</li>
             <li>커뮤니케이션 툴: Dropbox, Slack, Evernote, GoogleDrive, Hangout</li>
-            <li>일정관리: <a href="https://www.teamgantt.com">팀간트</a>, <a href="https://trello.com/"></a>trello</li>
+            <li>일정관리: <a href="https://www.teamgantt.com">Teamgantt</a>, <a href="https://trello.com/"></a>Trello</li>
             <li>언어: Swift</li>
-            <li>사용한 오픈소스 : Google Analytics</li>
-            <li>1.0.4 ~ 1.0.7버전 개발</li>
-            <li>버전별 업데이트주기 약 2주</li>
+            <li>사용한 오픈소스: Google Analytics</li>
+            <li>1.0.4 ~ 1.0.7 버전 개발</li>
+            <li>버전별 업데이트주기: 약 2주</li>
           </ul>
         </div>
 
