워드프레스 개발 추가-1

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -118,7 +118,7 @@
         <div class="resume-item" itemscope itemprop="alumniOf" itemtype="http://schema.org/CollegeOrUniversity">
           <h3 class="resume-item-title" itemprop="name"><a href="http://impactool.org">Impactool</a></h3>
           <h4 class="resume-item-details" itemprop="description">wordpress 개발 &bull; 2016.10.20 &mdash; 2016.11.4</h4>
-          <p class="resume-item-copy">위키같은 게시판 형식의 워드프레스</p>
+          <p class="resume-item-copy">위키같은 게시판 형식의 워드프레스를 요구사항대로 커스터마이징 하였습니다.</p>
             <li>사용한 테마: <a href="http://demo.herothemes.com/helpguru/">Helpguru</a></li>
             <li>기능: 반응형 웹</li>
             <li>진행방식: 클라이언트 커뮤니케이션은 <a href=" www.seeso.kr">시소</a>가 직접 진행, 실제 개발만 함</li>
